package pkg;  

option java_package = "com.baidu.bjf.remoting.protobuf.simplestring";
  
option java_outer_classname = "StringTypeClass";  
  
message StringMessage {  
  required string list = 1;
}  
  
